spring cloud alibaba使用endpoint集成springboot actuator.

--- a/sentinel-service/src/main/resources/application.yml
+++ b/sentinel-service/src/main/resources/application.yml
@@ -22,6 +22,11 @@ spring:
             data-type: json
             rule-type: flow
 
+# Endpoint 支持
+# 在使用 Endpoint 特性之前需要在 Maven 中添加 spring-boot-starter-actuator 依赖，并在配置中允许 Endpoints 的访问。
+# Spring Boot 1.x 中添加配置 management.security.enabled=false。暴露的 endpoint 路径为 /sentinel
+# Spring Boot 2.x 中添加配置 management.endpoints.web.exposure.include=*。暴露的 endpoint 路径为 /actuator/sentinel
+# Sentinel Endpoint 里暴露的信息非常有用。包括当前应用的所有规则信息、日志目录、当前实例的 IP，Sentinel Dashboard 地址，Block Page，应用与 Sentinel Dashboard 的心跳频率等等信息。
 management:
   endpoints:
     web:
