--- a/seata-consumer-service/pom.xml
+++ b/seata-consumer-service/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.luxf.cloud.alibaba.seata</groupId>
-    <artifactId>seata-provider-service</artifactId>
+    <artifactId>seata-consumer-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>seata-provider-service</name>
+    <name>seata-consumer-service</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -26,6 +26,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
