--- a/seata-consumer-service/src/main/resources/application.yml
+++ b/seata-consumer-service/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 server:
-  port: 17711
+  port: 17721
+
 spring:
   application:
-    name: seata-provider-service
+    name: seata-consumer-service
   cloud:
     nacos:
       discovery:
@@ -11,7 +12,7 @@ spring:
     username: root
     password: root123
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/seata_storage?serverTimezone=GMT%2B8&useSSL=false&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=CONVERT_TO_NULL
+    url: jdbc:mysql://localhost:3306/seata_order?serverTimezone=GMT%2B8&useSSL=false&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=CONVERT_TO_NULL
 
 mybatis:
   mapper-locations: classpath:mapper/*Mapper.xml
